--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "cross-env": "^5.2.0",
     "customize-cra": "^0.2.13",
     "electron-is-dev": "^1.1.0",
+    "electron-rebuild": "^1.8.5",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "sql.js": "^1.0.0",
     "typescript": "3.5.1"
   },
   "scripts": {
